# Modulos_Paquetes

./: pyproject.toml
temperaturas/: temp_convrt.py
tests/: test_temperaturas.py
