[tool.poetry]
name = "temperaturas"
version = "0.1.0"
description = ""
authors = ["jordyceligith <63682345+jordyceligith@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
